# ptfid

./: .env.sample  .gitignore  README.md  compose.yaml  pyproject.toml  requirements.dev.txt  ruff.toml
docker/torch/: Dockerfile  requirements.txt
ptfid/: __init__.py  __main__.py  config.py  const.py  logger.py  ptfid.py  utils.py  version.py
ptfid/core/: __init__.py  _sqrtm_gpu.py  efficient_fid.py  fid.py  fid_gpu.py  kid.py  original.py  pr.py  toppr.py
ptfid/data/: __init__.py  dataset.py  interpolate_compat_tensorflow.py  interpolate_compat_tensorflow_orig.py  normalize.py  resize.py
ptfid/feature/: __init__.py  clip.py  dinov2.py  inception.py  inception_ts.py  resnet50.py  timm_models.py  utils.py
