[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ptfid"
license = {file = "LICENSE"}
description = "PyTorch implementation of FID."
authors = [
    {name = "Tomoya Sawada", email = "stomoya0110@gmail.com"}
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "datasets[vision]",
    "gudhi==3.9.0",
    "ninja",
    "open_clip_torch",
    "scikit-learn",
    "timm",
    "torch",
    "torchvision",
    "typer",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/STomoya/ptfid"

[project.scripts]
ptfid = "ptfid.__main__:cli"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools.dynamic]
version = {attr = "ptfid.version.__version__"}
